--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Aug 04 15:35:03 IST 2022
-sdk.dir=C\:\\Users\\Home\\AppData\\Local\\Android\\Sdk
+#Sat Aug 06 12:58:33 IST 2022
+sdk.dir=C\:\\Users\\KIIT\\AppData\\Local\\Android\\Sdk
