--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,8 @@
         android:theme="@style/Theme.Muskan"
         tools:targetApi="31">
         <activity
-            android:name=".firstPage"
-            android:exported="true"
-            android:theme="@style/Theme.Muskan">
-
-        </activity>
-        <activity
-            android:name=".IntroActivity"
-            android:exported="true">
+            android:name=".choiceActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,18 +23,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegisterActivity"
-            android:exported="true" >
+            android:name=".adminActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".firstPage"
+            android:exported="true"
+            android:theme="@style/Theme.Muskan"></activity>
+        <activity
+            android:name=".IntroActivity"
+            android:exported="true">
 
         </activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".SignInActivity"
             android:exported="false">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
