--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 05 16:12:02 IST 2022
-sdk.dir=C\:\\Users\\Sanjay Sargam\\AppData\\Local\\Android\\Sdk
+#Sun Oct 09 21:24:50 IST 2022
+sdk.dir=C\:\\Users\\AMIT\\3D Objects
